--- a/Planet.html
+++ b/Planet.html
@@ -2,22 +2,22 @@
 <html>
 
 <head>
-<title>First planet</title>
+
+<title>Planet</title>
+
 <meta charset="utf-8">
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
 
-<link rel="stylesheet" href="Planet.css" type="text/css" />
+<link rel="stylesheet" href="Planet.css" type="text/css">
 
-<script type="text/javascript" src="b4w.min.js"></script>
+<script type="text/javascript" src="..\..\dist\b4w.js"></script>
 
 <script type="text/javascript" src="Planet.js"></script>
 
 </head>
 
 <body>
-
-<div id="main_canvas_container"></div>
-
+  <div id="main_canvas_container"></div>
 </body>
 
 </html>
